2010-01-07 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyPFJet: add

2010-01-06 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyPFMET, ISpyCaloMET: add
	
2010-01-06 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyCSCSegment.cc: constrain segment to chamber
	* MakeISpyAnalyzer.py: update to use config for error
	
2009-12-22  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyMET.cc: Migtrated to a new MET data format.

2009-12-08 Ianna Osborne <ianna.osborne@cern.ch>
	
	* ISpyEventSetup.cc: Separate the tracker and RPC geometry to
	barrel detectors and encaps.

2009-12-08 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyPATMET, ISpyPATJet: add

2009-12-08 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyCSCRecHit2D.cc: add time and evolve schema

2009-12-08 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyTrackingRecHit.*: change to VInputTag
	* ISpyTrack.cc, ISpyHBRecHit.cc, ISpyHERecHit.cc, ISpyHORecHit.cc, ISpyHFRecHit.cc, ISpyEBRecHit.cc, ISpyEERecHit.cc, ISpyESRecHit.cc:
	evolve schema to V2
	* ispy_*.py: change to iSpyTrackingRecHitTags where appropriate
	
2009-12-08  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyService.h, ISpyService.cc: Provide error reporting
	function. 
	* ISpyMuon.h, ISpyPATMuon.h, ISpyBasicCluster.cc,
	ISpyCSCRecHit2D.cc, ISpyCSCSegment.cc, ISpyCSCStripDigi.cc,
	ISpyCSCWireDigi.cc, ISpyCaloCluster.cc, ISpyCaloHit.cc,
	ISpyCaloTower.cc, ISpyDTDigi.cc, ISpyDTRecHit.cc,
	ISpyDTRecSegment4D.cc, ISpyEBRecHit.cc, ISpyEERecHit.cc,
	ISpyESRecHit.cc, ISpyEcalRecHit.cc, ISpyElectron.cc, ISpyEvent.cc,
	ISpyGsfElectron.cc, ISpyGsfPFRecTrack.cc, ISpyGsfTrack.cc,
	ISpyHBRecHit.cc, ISpyHERecHit.cc, ISpyHFRecHit.cc,
	ISpyHORecHit.cc, ISpyJet.cc, ISpyL1GlobalTriggerReadoutRecord.cc,
	ISpyMET.cc, ISpyMuon.cc, ISpyPATElectron.cc, ISpyPATMuon.cc,
	ISpyPATPhoton.cc, ISpyPFCluster.cc, ISpyPFRecHit.cc,
	ISpyPFRecTrack.cc, ISpyPhoton.cc, ISpyPixelDigi.cc,
	ISpyPreshowerCluster.cc, ISpyRPCRecHit.cc, ISpyService.cc,
	ISpySiPixelCluster.cc, ISpySiPixelRecHit.cc,