@@ -1,0 +1,5 @@
+import FWCore.ParameterSet.Config as cms
+
+ISpyPFTau = cms.EDAnalyzer('ISpyPFTau',
+                            iSpyPFTauTag = cms.InputTag('fixedConeHighEffPFTauProducer')
+                           )
